[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "accelerate",
    "tqdm",
    "python-dotenv",
    "stanza",
    "conllu",
    "scipy",
    "matplotlib",
    "jupyterlab",
    "ipywidgets",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cuda" }]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
